# fin

./: .gitignore  AGENT-BRIDGE.md  PRODUCT.md  README.md  UPDATES.md  twiter,txt
agent-bridge/: .env.example  .gitignore  2026-02-22-200250-this-session-is-being-continued-from-a-previous-co.txt  ARCHITECTURE.md  Dockerfile  HOW_TO_RUN.md  fly.toml  go.mod  go.sum  main.go
agent-bridge/internal/db/: db.go
agent-bridge/internal/handler/: admin.go  context.go  logs.go  orders.go  positions.go  prices.go  proxy.go  skills.go  stream.go  token.go
agent-bridge/internal/matching/: engine.go  liquidation.go  orderbook.go  price.go
agent-bridge/internal/middleware/: cors.go
agent-bridge/internal/positions/: store.go
agent-bridge/internal/sdex/: client.go
agent-bridge/internal/soroban/: client.go  rpc.go
agent-bridge/internal/store/: store.go
agent-bridge/internal/watcher/: account.go  orderbook.go
contracts/: .env  Cargo.toml  INTEGRATION.md  contextwhilebuilding.md
contracts/contracts/: CONTRACTS.md
contracts/contracts/agent_vault/: Cargo.toml
contracts/contracts/leverage_pool/: Cargo.toml
contracts/contracts/leverage_pool/src/: lib.rs
contracts/contracts/zk_auth/: Cargo.toml
contracts/contracts/zk_auth/src/: lib.rs
docs/self-hosting/: 1password-ops.md  bridge-setup.md  deployment.md  frontend-setup.md  requirements.md
docs/smart-contracts/: i128-scaling.md  leverage-pool.md  transaction-lifecycle.md
fin/: index.js  package-lock.json  package.json
fin/src/actions/: account.ts  index.ts  orderbook.ts  (+1 more)
flow/: package-lock.json  package.json
(+45 files in other folders)
