[package]
name = "leverage-pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25", features = ["hazmat-address"] }

[dev-dependencies]
soroban-sdk = { version = "25", features = ["testutils", "hazmat-address"] }
