[package]
name = "zk-auth"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25", features = ["hazmat-crypto"] }
soroban-poseidon = "25"

[dev-dependencies]
soroban-sdk = { version = "25", features = ["testutils", "hazmat-crypto"] }
